force-app/main/default/objects/TriggerFeature__mdt/fields/AfterUndelete__c.field-meta.xml
<CustomField>
    <fullName>AfterUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;after undelete&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;after undelete&quot; context.</inlineHelpText>
    <label>After Undelete</label>
    <type>Checkbox</type>
</CustomField>