force-app/main/default/objects/TriggerFeature__mdt/fields/AfterUpdate__c.field-meta.xml
<CustomField>
    <fullName>AfterUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Runs this handler in &quot;after update&quot; context.</description>
    <inlineHelpText>Runs the handler in &quot;after update&quot; context.</inlineHelpText>
    <label>After Update</label>
    <type>Checkbox</type>
</CustomField>