force-app/main/default/objects/TriggerFeature__mdt/fields/Asynchronous__c.field-meta.xml
<CustomField>
    <fullName>Asynchronous__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Executes the trigger handler asynchronously (queued in a separate transaction).</description>
    <inlineHelpText>When enabled, the handler will run via Salesforce Queueable Apex, freeing up trigger runtime limits. Use this for non-urgent logic, callouts, or operations requiring higher governor limits.</inlineHelpText>
    <label>Asynchronous</label>
    <type>Checkbox</type>
</CustomField>