force-app/main/default/objects/TriggerFeature__mdt/fields/BypassPermission__c.field-meta.xml
<CustomField>
    <fullName>BypassPermission__c</fullName>
    <description>API name of a custom permission to bypass the trigger</description>
    <inlineHelpText>API name of a custom permission to bypass the trigger</inlineHelpText>
    <label>Bypass Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>