force-app/main/default/objects/TriggerFeature__mdt/fields/Handler__c.field-meta.xml
<CustomField>
    <fullName>Handler__c</fullName>
    <description>Apex class name that implements the business logic for this trigger feature.</description>
    <inlineHelpText>Enter the fully qualified Apex class name (e.g., &apos;AccountValidationHandler&apos;). The class must implement the ITriggerExecutable interface.</inlineHelpText>
    <label>Handler</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>