force-app/main/default/objects/TriggerFeature__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activates or deactivates this trigger feature. Uncheck to disable the business logic without deleting the configuration.</description>
    <inlineHelpText>When checked, the associated trigger handler will execute during the specified trigger events. Use this to temporarily disable features (e.g., during data migrations) while retaining their configuration. Best Practice: Deactivate instead of deleting to preserve historical metadata.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>