force-app/main/default/objects/TriggerFeature__mdt/fields/LoadOrder__c.field-meta.xml
<CustomField>
    <fullName>LoadOrder__c</fullName>
    <description>Execution order of this feature relative to other features for the same SObject.</description>
    <inlineHelpText>Lower numbers execute first. Use this to enforce dependencies between features (e.g., run validation before calculation).</inlineHelpText>
    <label>Load Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>