force-app/main/default/objects/TriggerFeature__mdt/fields/RequiredPermission__c.field-meta.xml
<CustomField>
    <fullName>RequiredPermission__c</fullName>
    <description>API name of a custom permission required to execute the trigger</description>
    <inlineHelpText>API name of a custom permission required to execute the trigger</inlineHelpText>
    <label>Required Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>