force-app/main/default/objects/TriggerFeature__mdt/fields/SObjectName__c.field-meta.xml
<CustomField>
    <fullName>SObjectName__c</fullName>
    <description>API name of the SObject this trigger feature applies to.</description>
    <inlineHelpText>Enter the Salesforce object&apos;s API name (e.g., &apos;Account&apos;, &apos;CustomObject__c&apos;)</inlineHelpText>
    <label>SObject Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>