force-app/main/default/objects/TriggerFeature__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>SObjectName__c</columns>
    <columns>IsActive__c</columns>
    <columns>LoadOrder__c</columns>
    <columns>BeforeInsert__c</columns>
    <columns>AfterInsert__c</columns>
    <columns>BeforeUpdate__c</columns>
    <columns>AfterUpdate__c</columns>
    <columns>BeforeDelete__c</columns>
    <columns>AfterDelete__c</columns>
    <columns>AfterUndelete__c</columns>
    <columns>Asynchronous__c</columns>
    <columns>Handler__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>